# Odradek_Sense

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NeonSensors.h  NeonSynth.h  neon_engine.cpp
app/src/main/java/com/snakesan/neonflux/presentation/: MainActivity.kt
app/src/main/java/com/snakesan/neonflux/presentation/theme/: Theme.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
neonfluxmobile/: build.gradle.kts
neonfluxmobile/src/androidTest/java/com/snakesan/neonflux/: ExampleInstrumentedTest.kt
neonfluxmobile/src/main/: AndroidManifest.xml
neonfluxmobile/src/main/java/: FluxService.kt
neonfluxmobile/src/main/java/com/snakesan/neonflux/: MainActivity.kt
neonfluxmobile/src/main/java/com/snakesan/neonflux/ui/theme/: Color.kt  Theme.kt  Type.kt
neonfluxmobile/src/main/res/values/: strings.xml  themes.xml
neonfluxmobile/src/test/java/com/snakesan/neonflux/: ExampleUnitTest.kt
